[gd_scene load_steps=23 format=3 uid="uid://kmxmqrndlk0j"]

[ext_resource type="Script" path="res://Enemies/Damagable.gd" id="1_u872m"]
[ext_resource type="Script" path="res://Enemies/slime.gd" id="1_ypn5h"]
[ext_resource type="Texture2D" uid="uid://cdp8msts1sh2q" path="res://Art/Sprites/Basic_Enemy.png" id="2_88mys"]
[ext_resource type="Texture2D" uid="uid://dfawrqdcitey8" path="res://Art/Sprites/slime_death.png" id="4_8g6iy"]
[ext_resource type="Script" path="res://Characters/CharStateMachine.gd" id="5_ngaac"]
[ext_resource type="Script" path="res://Enemies/Walk.gd" id="6_5g35p"]
[ext_resource type="Script" path="res://Enemies/Dead.gd" id="7_u1m4e"]
[ext_resource type="Script" path="res://Enemies/HitState.gd" id="8_35j0q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhxwq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5o41"]
size = Vector2(24, 23)

[sub_resource type="Animation" id="Animation_2qk72"]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_8g6iy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i8ugt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_88mys")]
}

[sub_resource type="Animation" id="Animation_ukmum"]
resource_name = "Walk"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_88mys")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r5gnf"]
_data = {
"Death": SubResource("Animation_2qk72"),
"RESET": SubResource("Animation_i8ugt"),
"Walk": SubResource("Animation_ukmum")
}

[sub_resource type="Animation" id="Animation_mf8km"]
resource_name = "Hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0.137255, 0.552941), Color(0.458824, 0.152941, 0.113725, 0.545098)]
}

[sub_resource type="Animation" id="Animation_c0mht"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0.0941176, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1j5yp"]
_data = {
"Hurt": SubResource("Animation_mf8km"),
"RESET": SubResource("Animation_c0mht")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dbqng"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uglbi"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mvgx7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7yvxt"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bmn4w"]
states/Death/node = SubResource("AnimationNodeAnimation_dbqng")
states/Death/position = Vector2(661, 95)
states/Walk/node = SubResource("AnimationNodeAnimation_uglbi")
states/Walk/position = Vector2(449, 95)
transitions = ["Start", "Walk", SubResource("AnimationNodeStateMachineTransition_mvgx7"), "Walk", "Death", SubResource("AnimationNodeStateMachineTransition_7yvxt")]

[node name="Slime" type="CharacterBody2D"]
position = Vector2(993, 325)
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ypn5h")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("1_u872m")

[node name="Timer" type="Timer" parent="Damageable"]
wait_time = 0.33

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_88mys")
hframes = 4

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -133.0
offset_top = -227.0
offset_right = 140.0
offset_bottom = 220.0
color = Color(1, 0, 0.0941176, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
shape = SubResource("RectangleShape2D_fhxwq")
disabled = true
debug_color = Color(0.901961, 0.219608, 0.54902, 0.419608)

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 4
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_j5o41")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r5gnf")
}

[node name="EffectsPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1j5yp")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r5gnf")
}
tree_root = SubResource("AnimationNodeStateMachine_bmn4w")
anim_player = NodePath("../AnimationPlayer")

[node name="Pathfinding" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Pathfinding"]

[node name="Timer" type="Timer" parent="Pathfinding"]
wait_time = 0.1
autostart = true

[node name="CharStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "currentState", "animationTree")]
script = ExtResource("5_ngaac")
character = NodePath("..")
currentState = NodePath("Walk")
animationTree = NodePath("../AnimationTree")

[node name="Walk" type="Node" parent="CharStateMachine"]
script = ExtResource("6_5g35p")

[node name="Dead" type="Node" parent="CharStateMachine"]
script = ExtResource("7_u1m4e")

[node name="HitState" type="Node" parent="CharStateMachine" node_paths=PackedStringArray("damageable", "charStateMachine", "dead_state")]
script = ExtResource("8_35j0q")
damageable = NodePath("../../Damageable")
charStateMachine = NodePath("..")
dead_state = NodePath("../Dead")

[connection signal="timeout" from="Damageable/Timer" to="Damageable" method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="Pathfinding/Timer" to="." method="_on_timer_timeout"]
